--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,12 @@ jobs:
           node-version: 16
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Generate Contributors Images
-        uses: jaywcjlove/github-action-contributors@main
-        id: contributors
-        with:
-          filter-author: (renovate\[bot\]|renovate-bot|@github-actions-bot|dependabot\[bot\])
-          avatarSize: 42
+#       - name: Generate Contributors Images
+#         uses: jaywcjlove/github-action-contributors@main
+#         id: contributors
+#         with:
+#           filter-author: (renovate\[bot\]|renovate-bot|@github-actions-bot|dependabot\[bot\])
+#           avatarSize: 42
 
 #       - name: Modify README.md
 #         uses: jaywcjlove/github-action-modify-file-content@main
@@ -40,84 +40,84 @@ jobs:
 #           body: |
 #             ${{steps.contributors.outputs.htmlList}}
 
-      - run: npm install
-      - run: npm run dash
-      - run: cp CONTRIBUTORS.svg .deploy
+#       - run: npm install
+#       - run: npm run dash
+#       - run: cp CONTRIBUTORS.svg .deploy
 
-      - name: Build Linux Command
-        run: |
-          npm install
-          npm run dash
-          cp CONTRIBUTORS.svg .deploy
+#       - name: Build Linux Command
+#         run: |
+#           npm install
+#           npm run dash
+#           cp CONTRIBUTORS.svg .deploy
 
-      - name: Create Tag
-        id: create_tag
-        uses: jaywcjlove/create-tag-action@main
-        with:
-          package-path: ./package.json
+#       - name: Create Tag
+#         id: create_tag
+#         uses: jaywcjlove/create-tag-action@main
+#         with:
+#           package-path: ./package.json
 
-      - name: Get Tag Version
-        id: tag_version
-        uses: jaywcjlove/changelog-generator@main
+#       - name: Get Tag Version
+#         id: tag_version
+#         uses: jaywcjlove/changelog-generator@main
 
-      - name: Update Dash Feed
-        run: |
-          echo "<entry><version>${{steps.create_tag.outputs.versionNumber}}</version><url>https://jaywcjlove.github.io/linux-command/linux-command.docset.tgz</url></entry>" > .deploy/linux-command-docset.xml
+#       - name: Update Dash Feed
+#         run: |
+#           echo "<entry><version>${{steps.create_tag.outputs.versionNumber}}</version><url>https://jaywcjlove.github.io/linux-command/linux-command.docset.tgz</url></entry>" > .deploy/linux-command-docset.xml
 
-      - name: Generate Changelog
-        id: changelog
-        uses: jaywcjlove/changelog-generator@main
-        with:
-          filter-author: (小弟调调™)
-          filter: (^[\s]+?[R|r]elease)|(^[R|r]elease)
+#       - name: Generate Changelog
+#         id: changelog
+#         uses: jaywcjlove/changelog-generator@main
+#         with:
+#           filter-author: (小弟调调™)
+#           filter: (^[\s]+?[R|r]elease)|(^[R|r]elease)
 
-      - name: Create Release
-        uses: ncipollo/release-action@v1
-        if: steps.create_tag.outputs.successful
-        with:
-          artifacts: '.deploy/linux-command.docset.tgz'
-          token: ${{ secrets.GITHUB_TOKEN }}
-          name: ${{ steps.create_tag.outputs.version }}
-          tag: ${{ steps.create_tag.outputs.version }}
-          body: |
-            [![](https://img.shields.io/badge/Open%20in-unpkg-blue)](https://uiwjs.github.io/npm-unpkg/#/pkg/linux-command@${{steps.create_tag.outputs.versionNumber}}/file/README.md) [![npm bundle size](https://img.shields.io/bundlephobia/minzip/linux-command)](https://bundlephobia.com/result?p=linux-command@${{steps.create_tag.outputs.versionNumber}})
+#       - name: Create Release
+#         uses: ncipollo/release-action@v1
+#         if: steps.create_tag.outputs.successful
+#         with:
+#           artifacts: '.deploy/linux-command.docset.tgz'
+#           token: ${{ secrets.GITHUB_TOKEN }}
+#           name: ${{ steps.create_tag.outputs.version }}
+#           tag: ${{ steps.create_tag.outputs.version }}
+#           body: |
+#             [![](https://img.shields.io/badge/Open%20in-unpkg-blue)](https://uiwjs.github.io/npm-unpkg/#/pkg/linux-command@${{steps.create_tag.outputs.versionNumber}}/file/README.md) [![npm bundle size](https://img.shields.io/bundlephobia/minzip/linux-command)](https://bundlephobia.com/result?p=linux-command@${{steps.create_tag.outputs.versionNumber}})
             
-            ```bash
-            npm i linux-command@${{steps.create_tag.outputs.versionNumber}}
-            ```
+#             ```bash
+#             npm i linux-command@${{steps.create_tag.outputs.versionNumber}}
+#             ```
 
-            ${{ steps.changelog.outputs.compareurl }}
+#             ${{ steps.changelog.outputs.compareurl }}
             
-            ${{ steps.changelog.outputs.changelog }}
+#             ${{ steps.changelog.outputs.changelog }}
 
 
-            Document linux-command@${{ steps.changelog.outputs.tag }}:  
-            https://raw.githack.com/jaywcjlove/linux-command/${{ steps.changelog.outputs.gh-pages-short-hash }}/index.html
+#             Document linux-command@${{ steps.changelog.outputs.tag }}:  
+#             https://raw.githack.com/jaywcjlove/linux-command/${{ steps.changelog.outputs.gh-pages-short-hash }}/index.html
 
 
-            ## Docker
+#             ## Docker
 
-            [![Docker Image Version (latest by date)](https://img.shields.io/docker/v/wcjiang/linux-command)](https://hub.docker.com/r/wcjiang/linux-command) [![Docker Image Size (latest by date)](https://img.shields.io/docker/image-size/wcjiang/linux-command)](https://hub.docker.com/r/wcjiang/linux-command) [![Docker Pulls](https://img.shields.io/docker/pulls/wcjiang/linux-command)](https://hub.docker.com/r/wcjiang/linux-command)
+#             [![Docker Image Version (latest by date)](https://img.shields.io/docker/v/wcjiang/linux-command)](https://hub.docker.com/r/wcjiang/linux-command) [![Docker Image Size (latest by date)](https://img.shields.io/docker/image-size/wcjiang/linux-command)](https://hub.docker.com/r/wcjiang/linux-command) [![Docker Pulls](https://img.shields.io/docker/pulls/wcjiang/linux-command)](https://hub.docker.com/r/wcjiang/linux-command)
 
-            轻松通过 `docker` 部署 `linux-command` 网站。
+#             轻松通过 `docker` 部署 `linux-command` 网站。
 
-            ```bash
-            docker pull wcjiang/linux-command
-            ```
+#             ```bash
+#             docker pull wcjiang/linux-command
+#             ```
 
-            ```bash
-            docker run --name linux-command --rm -d -p 9665:3000 wcjiang/linux-command:latest
-            # Or
-            docker run --name linux-command -itd -p 9665:3000 wcjiang/linux-command:latest
-            ```
+#             ```bash
+#             docker run --name linux-command --rm -d -p 9665:3000 wcjiang/linux-command:latest
+#             # Or
+#             docker run --name linux-command -itd -p 9665:3000 wcjiang/linux-command:latest
+#             ```
 
-            在浏览器中访问以下 URL
+#             在浏览器中访问以下 URL
 
-            ```bash
-            http://localhost:9665/
-            ```
+#             ```bash
+#             http://localhost:9665/
+#             ```
 
-      - run: rm -rf .deploy/linux-command.docset 
+#       - run: rm -rf .deploy/linux-command.docset 
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
