--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "linux-command",
-  "version": "1.16.0",
+  "version": "0.0.1",
   "description": "Linux Command",
-  "homepage": "https://jaywcjlove.github.io/linux-command/",
+  "homepage": "https://dushenda.github.io/linux-command/",
   "main": "dist/data.json",
   "scripts": {
     "start": "npm run build",
@@ -22,7 +22,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jaywcjlove/linux-command.git"
+    "url": "git+https://github.com/dushenda/linux-command.git"
   },
   "devDependencies": {
     "@uiw/github-corners": "~1.5.11",
