--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linux-command",
-  "version": "1.0.0",
+  "version": "v1.0.0",
   "description": "Linux Command",
   "homepage": "https://dushenda.github.io/linux-command/",
   "main": "dist/data.json",
