--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,30 +15,30 @@ jobs:
           node-version: 16
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Generate Contributors Images
-        uses: jaywcjlove/github-action-contributors@main
-        id: contributors
-        with:
-          filter-author: (renovate\[bot\]|renovate-bot|@github-actions-bot|dependabot\[bot\])
-          avatarSize: 42
+#       - name: Generate Contributors Images
+#         uses: jaywcjlove/github-action-contributors@main
+#         id: contributors
+#         with:
+#           filter-author: (renovate\[bot\]|renovate-bot|@github-actions-bot|dependabot\[bot\])
+#           avatarSize: 42
 
-      - name: Modify README.md
-        uses: jaywcjlove/github-action-modify-file-content@main
-        with:
-          path: README.md
-          openDelimiter: '<!--AUTO_GENERATED_PLEASE_DONT_DELETE_IT-->'
-          closeDelimiter: '<!--AUTO_GENERATED_PLEASE_DONT_DELETE_IT-END-->'
-          body: |
-            ${{steps.contributors.outputs.htmlList}}
+#       - name: Modify README.md
+#         uses: jaywcjlove/github-action-modify-file-content@main
+#         with:
+#           path: README.md
+#           openDelimiter: '<!--AUTO_GENERATED_PLEASE_DONT_DELETE_IT-->'
+#           closeDelimiter: '<!--AUTO_GENERATED_PLEASE_DONT_DELETE_IT-END-->'
+#           body: |
+#             ${{steps.contributors.outputs.htmlList}}
 
-      - name: Modify contributors.ejs
-        uses: jaywcjlove/github-action-modify-file-content@main
-        with:
-          path: template/contributors.ejs
-          openDelimiter: '<!--AUTO_GENERATED_PLEASE_DONT_DELETE_IT-->'
-          closeDelimiter: '<!--AUTO_GENERATED_PLEASE_DONT_DELETE_IT-END-->'
-          body: |
-            ${{steps.contributors.outputs.htmlList}}
+#       - name: Modify contributors.ejs
+#         uses: jaywcjlove/github-action-modify-file-content@main
+#         with:
+#           path: template/contributors.ejs
+#           openDelimiter: '<!--AUTO_GENERATED_PLEASE_DONT_DELETE_IT-->'
+#           closeDelimiter: '<!--AUTO_GENERATED_PLEASE_DONT_DELETE_IT-END-->'
+#           body: |
+#             ${{steps.contributors.outputs.htmlList}}
 
       - run: npm install
       - run: npm run dash
