--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "Linux",
     "Command"
   ],
-  "author": "kenny wang <wowohoo@qq.com>",
+  "author": "dushenda<dushenda@outlook.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
